# torrent-crab

./: .gitignore  Cargo.toml  README.md
benches/: parse_benchmark.rs
examples/: create_test_torrent.py
src/: error.rs  lib.rs  main.rs  metainfo.rs
src/bencode/: mod.rs
src/peer/: mod.rs
src/tracker/: mod.rs
tests/: integration_test.rs
