[package]
name = "torrent-crab"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <abhinavtripathi@protonmail.com>"]
description = "A BitTorrent client implementation in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tripab/torrent-crab"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_bencode = "0.2"
sha1 = "0.10"
hex = "0.4"
thiserror = "1.0"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
url = "2.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4", features = ["derive"] }
rand = "0.8"

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

[[bench]]
name = "parse_benchmark"
harness = false

[[bin]]
name = "torrent-crab"
path = "src/main.rs"
